force-app/main/default/objects/AIAssistUISettings__c/AIAssistUISettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>UI and interaction behavior for AI Assist, overridable at Org Default, Profile, or User level.</description>
    <label>AI Assist UI Settings</label>
</CustomObject>