force-app/main/default/objects/AIAssistUISettings__c/fields/AllowInlineWorkflowActions__c.field-meta.xml
<CustomField>
    <fullName>AllowInlineWorkflowActions__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether suggested Workflow Actions render as inline cards the user can confirm directly in chat.</description>
    <inlineHelpText>Turn this off to suppress inline action suggestions at this level.</inlineHelpText>
    <label>Allow Inline Workflow Actions</label>
    <type>Checkbox</type>
</CustomField>