force-app/main/default/objects/AIAssistUISettings__c/fields/DisableUserInitiatedChat__c.field-meta.xml
<CustomField>
    <fullName>DisableUserInitiatedChat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents users from starting new conversations, while allowing existing open conversations to continue.</description>
    <inlineHelpText>Turn this on to block new conversations without disrupting ones already in progress.</inlineHelpText>
    <label>Disable User Initiated Chat</label>
    <type>Checkbox</type>
</CustomField>