force-app/main/default/objects/AIAssistUISettings__c/fields/IsFeedbackEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsFeedbackEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the thumbs up/down rating prompt appears under AI responses.</description>
    <inlineHelpText>Turn this off to hide the feedback prompt for this level.</inlineHelpText>
    <label>Is Feedback Enabled</label>
    <type>Checkbox</type>
</CustomField>