force-app/main/default/objects/AIAssistUISettings__c/fields/IsMaintenanceMode__c.field-meta.xml
<CustomField>
    <fullName>IsMaintenanceMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows a maintenance overlay instead of the chat interface at this hierarchy level.</description>
    <inlineHelpText>Allows maintenance mode to be scoped narrower than org-wide, such as to a specific profile.</inlineHelpText>
    <label>Is Maintenance Mode</label>
    <type>Checkbox</type>
</CustomField>