force-app/main/default/objects/AIAssistUISettings__c/fields/IsUserInitiatedChatEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsUserInitiatedChatEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether users can start new conversations. Unchecked, new conversations are refused while existing open conversations can continue.</description>
    <inlineHelpText>Turn this off to block new conversations without disrupting ones already in progress.</inlineHelpText>
    <label>Is User Initiated Chat Enabled</label>
    <type>Checkbox</type>
</CustomField>