force-app/main/default/objects/AIAssistUISettings__c/fields/MaxVisibleMessageHistory__c.field-meta.xml
<CustomField>
    <fullName>MaxVisibleMessageHistory__c</fullName>
    <description>How many past messages render before requiring a &quot;load more.&quot;</description>
    <inlineHelpText>Set the number of messages shown before requiring a click-through.</inlineHelpText>
    <label>Max Visible Message History</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>