force-app/main/default/objects/AIAssistUISettings__c/fields/ShowExecutionTraceToUser__c.field-meta.xml
<CustomField>
    <fullName>ShowExecutionTraceToUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether end users can see step-by-step reasoning detail.</description>
    <inlineHelpText>Otherwise visible only to admins reviewing Execution Step records directly.</inlineHelpText>
    <label>Show Execution Trace To User</label>
    <type>Checkbox</type>
</CustomField>