force-app/main/default/objects/AIAssistUISettings__c/fields/ShowTimestampOnMessages__c.field-meta.xml
<CustomField>
    <fullName>ShowTimestampOnMessages__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether individual message timestamps are visible in the chat.</description>
    <inlineHelpText>Turn this on to display timestamps on each message.</inlineHelpText>
    <label>Show Timestamp On Messages</label>
    <type>Checkbox</type>
</CustomField>