force-app/main/default/objects/AIAssistUISettings__c/fields/SuggestedActionsDisplay__c.field-meta.xml
<CustomField>
    <fullName>SuggestedActionsDisplay__c</fullName>
    <description>How suggested Workflow Actions are visually rendered, when allowed. Accepts &quot;Cards&quot; or &quot;Inline Buttons&quot; (Custom Settings do not support picklist fields).</description>
    <inlineHelpText>Choose how action suggestions should be displayed. Enter either Cards or Inline Buttons.</inlineHelpText>
    <label>Suggested Actions Display</label>
    <length>20</length>
    <type>Text</type>
</CustomField>