force-app/main/default/objects/AIAssistUISettings__c/fields/TypingIndicatorEnabled__c.field-meta.xml
<CustomField>
    <fullName>TypingIndicatorEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether a &quot;thinking&quot; indicator displays while a response is being generated.</description>
    <inlineHelpText>Turn this off to remove the typing indicator at this level.</inlineHelpText>
    <label>Typing Indicator Enabled</label>
    <type>Checkbox</type>
</CustomField>